# rcppSample

./: DESCRIPTION  Dockerfile  LICENSE  NAMESPACE  README.md
.github/workflows/: python-r-cpp.yaml  r-cpp.yaml
R/: sample.R
src/: sample.cpp  sample.h
tests/: CMakeLists.txt  test_sample.cpp  testthat.R
tests/testthat/: test-sample.R
